# file-sync-pro

./: .gitignore  changelog.md  pyproject.toml  readme.zh.md
data/snapshots/: readme.md
src/file_sync_pro/: __init__.py  __main__.py  doctor.py  filesys.py  init.py  main.py  snapshot.py  ui.py
src/file_sync_pro/filesys/: __init__.py  air.py  air2.py  base.py  dufs.py  ftp.py  general.py  local.py
src/file_sync_pro/filesys2/: __init__.py  api.py  general.py  local.py  remote.py  specific.py
src/file_sync_pro/snapshot/: __init__.py  api.py  class_.py  dataclass.py
src/file_sync_pro/ui/: main.py  snap_maker.py
src/file_sync_pro/ui_qt/: app.py
src/file_sync_pro/ui_qt/qml/: Main.qml
src/file_sync_pro/ui_st/: app.py
