[project]
name = "file-sync-pro"
version = "0.2.0a16"
description = ""
# readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
packages = [{ include = "file_sync_pro", from = "src" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.12"
# in this group we only list essential packages that are cross platform required.
# --- essentials
airmise = { version = "^2.0.1a1", source = "likianta" }
argsense = { version = "^1.1.1a0", source = "likianta" }
lk-utils = { version = "^3.5.0a8", source = "likianta" }
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ipython = "^9.8.0"
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
# requests = { version = "^2.32.5", platform = "!=linux" }
streamlit = { version = "^1.53.0", platform = "!=linux" }
streamlit-canary = { version = "^0.1.1a13", source = "likianta", platform = "!=linux" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
